createInstance function